@@ -18,17 +18,23 @@
 
 package org.matsim.contrib.drt.optimizer.rebalancing.mincostflow;
 
+import static java.util.stream.Collectors.toList;
+
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.function.ToIntFunction;
 import java.util.stream.Stream;
 
-import org.apache.commons.lang3.tuple.Pair;
 import org.matsim.api.core.v01.network.Link;
 import org.matsim.contrib.drt.analysis.zonal.DrtZonalSystem;
+import org.matsim.contrib.drt.analysis.zonal.DrtZone;
+import org.matsim.contrib.drt.optimizer.rebalancing.RebalancingParams;
 import org.matsim.contrib.drt.optimizer.rebalancing.RebalancingStrategy;
+import org.matsim.contrib.drt.optimizer.rebalancing.mincostflow.AggregatedMinCostRelocationCalculator.DrtZoneVehicleSurplus;
+import org.matsim.contrib.drt.optimizer.rebalancing.targetcalculator.RebalancingTargetCalculator;
 import org.matsim.contrib.dvrp.fleet.DvrpVehicle;
 import org.matsim.contrib.dvrp.fleet.Fleet;
 import org.matsim.contrib.dvrp.schedule.Schedule;
@@ -40,43 +46,40 @@ import org.matsim.contrib.dvrp.schedule.Task.TaskStatus;
  * @author michalm
  */
 public class MinCostFlowRebalancingStrategy implements RebalancingStrategy {
-	public interface RebalancingTargetCalculator {
-		int estimate(String zone, double time);
-	}
 
 	private final RebalancingTargetCalculator rebalancingTargetCalculator;
 	private final DrtZonalSystem zonalSystem;
 	private final Fleet fleet;
-	private final MinCostRelocationCalculator minCostRelocationCalculator;
-	private final MinCostFlowRebalancingParams params;
+	private final RelocationCalculator relocationCalculator;
+	private final RebalancingParams params;
 
 	public MinCostFlowRebalancingStrategy(RebalancingTargetCalculator rebalancingTargetCalculator,
-			DrtZonalSystem zonalSystem, Fleet fleet, MinCostRelocationCalculator minCostRelocationCalculator,
-			MinCostFlowRebalancingParams params) {
+			DrtZonalSystem zonalSystem, Fleet fleet, RelocationCalculator relocationCalculator,
+			RebalancingParams params) {
 		this.rebalancingTargetCalculator = rebalancingTargetCalculator;
 		this.zonalSystem = zonalSystem;
 		this.fleet = fleet;
-		this.minCostRelocationCalculator = minCostRelocationCalculator;
+		this.relocationCalculator = relocationCalculator;
 		this.params = params;
 	}
 
 	@Override
 	public List<Relocation> calcRelocations(Stream<? extends DvrpVehicle> rebalancableVehicles, double time) {
-		Map<String, List<DvrpVehicle>> rebalancableVehiclesPerZone = groupRebalancableVehicles(rebalancableVehicles,
+		Map<DrtZone, List<DvrpVehicle>> rebalancableVehiclesPerZone = groupRebalancableVehicles(rebalancableVehicles,
 				time);
 		if (rebalancableVehiclesPerZone.isEmpty()) {
 			return Collections.emptyList();
 		}
-		Map<String, List<DvrpVehicle>> soonIdleVehiclesPerZone = groupSoonIdleVehicles(time);
+		Map<DrtZone, List<DvrpVehicle>> soonIdleVehiclesPerZone = groupSoonIdleVehicles(time);
 		return calculateMinCostRelocations(time, rebalancableVehiclesPerZone, soonIdleVehiclesPerZone);
 	}
 
-	private Map<String, List<DvrpVehicle>> groupRebalancableVehicles(Stream<? extends DvrpVehicle> rebalancableVehicles,
-			double time) {
-		Map<String, List<DvrpVehicle>> rebalancableVehiclesPerZone = new HashMap<>();
+	private Map<DrtZone, List<DvrpVehicle>> groupRebalancableVehicles(
+			Stream<? extends DvrpVehicle> rebalancableVehicles, double time) {
+		Map<DrtZone, List<DvrpVehicle>> rebalancableVehiclesPerZone = new HashMap<>();
 		rebalancableVehicles.filter(v -> v.getServiceEndTime() > time + params.getMinServiceTime()).forEach(v -> {
 			Link link = ((StayTask)v.getSchedule().getCurrentTask()).getLink();
-			String zone = zonalSystem.getZoneForLinkId(link.getId());
+			DrtZone zone = zonalSystem.getZoneForLinkId(link.getId());
 			if (zone != null) {
 				// zonePerVehicle.put(v.getId(), zone);
 				rebalancableVehiclesPerZone.computeIfAbsent(zone, z -> new ArrayList<>()).add(v);
@@ -86,15 +89,15 @@ public class MinCostFlowRebalancingStrategy implements RebalancingStrategy {
 	}
 
 	// also include vehicles being right now relocated or recharged
-	private Map<String, List<DvrpVehicle>> groupSoonIdleVehicles(double time) {
-		Map<String, List<DvrpVehicle>> soonIdleVehiclesPerZone = new HashMap<>();
+	private Map<DrtZone, List<DvrpVehicle>> groupSoonIdleVehicles(double time) {
+		Map<DrtZone, List<DvrpVehicle>> soonIdleVehiclesPerZone = new HashMap<>();
 		for (DvrpVehicle v : fleet.getVehicles().values()) {
 			Schedule s = v.getSchedule();
 			StayTask stayTask = (StayTask)Schedules.getLastTask(s);
 			if (stayTask.getStatus() == TaskStatus.PLANNED
 					&& stayTask.getBeginTime() < time + params.getMaxTimeBeforeIdle()
 					&& v.getServiceEndTime() > time + params.getMinServiceTime()) {
-				String zone = zonalSystem.getZoneForLinkId(stayTask.getLink().getId());
+				DrtZone zone = zonalSystem.getZoneForLinkId(stayTask.getLink().getId());
 				if (zone != null) {
 					soonIdleVehiclesPerZone.computeIfAbsent(zone, z -> new ArrayList<>()).add(v);
 				}
@@ -104,24 +107,18 @@ public class MinCostFlowRebalancingStrategy implements RebalancingStrategy {
 	}
 
 	private List<Relocation> calculateMinCostRelocations(double time,
-			Map<String, List<DvrpVehicle>> rebalancableVehiclesPerZone,
-			Map<String, List<DvrpVehicle>> soonIdleVehiclesPerZone) {
-		List<Pair<String, Integer>> supply = new ArrayList<>();
-		List<Pair<String, Integer>> demand = new ArrayList<>();
+			Map<DrtZone, List<DvrpVehicle>> rebalancableVehiclesPerZone,
+			Map<DrtZone, List<DvrpVehicle>> soonIdleVehiclesPerZone) {
+		ToIntFunction<DrtZone> targetFunction = rebalancingTargetCalculator.calculate(time,
+				rebalancableVehiclesPerZone);
 
-		for (String z : zonalSystem.getZones().keySet()) {
-			int rebalancable = rebalancableVehiclesPerZone.getOrDefault(z, Collections.emptyList()).size();
-			int soonIdle = soonIdleVehiclesPerZone.getOrDefault(z, Collections.emptyList()).size();
-			int target = rebalancingTargetCalculator.estimate(z, time);
+		List<DrtZoneVehicleSurplus> vehicleSurpluses = zonalSystem.getZones().values().stream().map(z -> {
+			int rebalancable = rebalancableVehiclesPerZone.getOrDefault(z, List.of()).size();
+			int soonIdle = soonIdleVehiclesPerZone.getOrDefault(z, List.of()).size();
+			int surplus = Math.min(rebalancable + soonIdle - targetFunction.applyAsInt(z), rebalancable);
+			return new DrtZoneVehicleSurplus(z, surplus);
+		}).collect(toList());
 
-			int delta = Math.min(rebalancable + soonIdle - target, rebalancable);
-			if (delta < 0) {
-				demand.add(Pair.of(z, -delta));
-			} else if (delta > 0) {
-				supply.add(Pair.of(z, delta));
-			}
-		}
-
-		return minCostRelocationCalculator.calcRelocations(supply, demand, rebalancableVehiclesPerZone);
+		return relocationCalculator.calcRelocations(vehicleSurpluses, rebalancableVehiclesPerZone);
 	}
 }
